# PortfolioEngine

./: .env  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/src/: currency.rs  fold.rs  ids.rs  instrument.rs  lib.rs  portfolio_config.rs  price.rs
crates/engine/: Cargo.toml
crates/engine/src/: currency.rs  error.rs  fold.rs  fx.rs  historical_price.rs  ids.rs  instrument.rs  lib.rs  lot.rs  lot_method.rs  money.rs  portfolio.rs  portfolio_config.rs  portfolio_state.rs  position.rs  price.rs  risk.rs  transaction.rs  valuation.rs
crates/engine/src/repository/: error.rs  instrument.rs  memory.rs  mod.rs  portfolio.rs  transaction.rs
crates/engine/tests/: serde_roundtrip.rs  valuation_properties.rs
crates/tui/: Cargo.toml
crates/tui/src/: data.rs  main.rs
frontend/: package-lock.json
src/: error.rs  fold.rs  fx.rs  lib.rs  lot.rs  lot_method.rs  money.rs  portfolio_state.rs  position.rs  transaction.rs  valuation.rs
tests/: fold_properties.proptest-regressions  fold_properties.rs
