[workspace]
members = ["crates/engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
rust_decimal = { version = "1.36", features = ["std"] }
chrono = { version = "0.4", features = ["std"] }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
