[package]
name = "ptf-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "ptf_engine"

[features]
default = []
serde = ["dep:serde", "rust_decimal/serde-with-str", "chrono/serde", "uuid/serde"]

[dependencies]
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
