[package]
name = "ptf-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ptf-engine = { path = "../engine", features = ["in-memory-repo", "serde"] }
ratatui = "0.29"
crossterm = "0.28"
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
